--- a/bower.json
+++ b/bower.json
@@ -5,5 +5,6 @@
   ,"ignore": [".gitignore", "bower.json", "package.json"]
   ,"dependencies": {
     "jquery": "1.11.0"
+    ,"background-size-polyfill": "0.2.0"
   }
 }
